# brickout

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt
src/: CMakeLists.txt
src/main/: brickout.cpp
src/main/backend/: Error.cpp  Error.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/main/shapes/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
src/main/types/aliases/: image.h  macro.h  math.h  opengl.h
src/main/types/enums/: WindowConstant.h
src/main/types/structs/: ModelViewProjection.h  Texture.h  Vertex.h
src/res/shaders/: basic.fragment.glsl  basic.vertex.glsl
